# Orbit

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.idx/: airules.md
examples/: simple.lang
src/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  orbit.cpp  parser.cpp  parser.h
